mobile wrapping fixes

--- a/src/assets/scss/_shared-styles.scss
+++ b/src/assets/scss/_shared-styles.scss
@@ -563,3 +563,11 @@ img.loading {
   font-family: var(--font-sans-serif);
   letter-spacing: -0.05em;
 }
+
+// temp
+.gy-3 {
+  row-gap: 1rem;
+}
+.gx-3 {
+  column-gap: 1rem;
+}
